Finished invoice and cart work

--- a/Store/Templates/Store/customer/addcard.html
+++ b/Store/Templates/Store/customer/addcard.html
@@ -5,7 +5,7 @@
   {% if user_id is none %}
     <li>You are currently logged out</li>
   {% else %}
-    <li><b>Greetings, {{username}}</li>
+    <li>Greetings, {{username}}</li>
   {% endif %}
 {% endblock %} 
 
