--- a/Store/Templates/Store/customer/shippay.html
+++ b/Store/Templates/Store/customer/shippay.html
@@ -19,11 +19,30 @@
 <div class="row">
     <form method="POST">
         {% csrf_token %}
-        <div class="col s6">
+        <div class="col s6">    
             <div class="section">
-                <h5>Payment Option</h5>
-            </div>        
-            <div class="section">
+                <div class="row">
+                    <div class="col s4">
+                        <h5>Payment Option</h5>
+                    </div>
+                    {% if shippay_form%}
+                    <div class="col s1">
+                        <a href="{% url 'customeraccount' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">edit</i></a>
+                    </div>
+                    <div class="col s1">
+                        <a href="{% url 'customeraddcard' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">add</i></a>
+                    </div>
+                    {% else %}
+                    <div class="col s1">
+                        <a href="{% url 'customeraddcard' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">add</i></a>
+                    </div>
+                    {% endif %}
+                </div>
+                {% if shippay_form is None %}
+                <div class="row">
+                    <span><b>Give those buttons a push up there!</b></span>
+                </div>
+                {% else %}
                 <div class="row">
                     <div class="col s6">
                         <h6>Credit Card</h6>
@@ -56,21 +75,33 @@
                         </ul>                    
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col s1 offset-s10">
-                        <a href="!#" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">edit</i></a>
-                    </div>
-                    <div class="col s1">
-                        <a href="!#" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">add</i></a>
-                    </div>
-                </div>
+                {% endif %}                
             </div>
         </div>
         <div class="col s6">
             <div class="section">
-                <h5>Shipping Address</h5>
-            </div>
-            <div class="section">        
+                <div class="row">
+                    <div class="col s4">
+                        <h5>Shipping Address</h5>
+                    </div>
+                    {% if shippay_form%}
+                    <div class="col s1">
+                        <a href="{% url 'customeraccount' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">edit</i></a>
+                    </div>
+                    <div class="col s1">
+                        <a href="{% url 'customeraccount' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">add</i></a>
+                    </div>
+                    {% else %}
+                    <div class="col s1">
+                        <a href="{% url 'customeraccount' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">add</i></a>
+                    </div>
+                    {% endif %}
+                </div>                            
+                {% if shippay_form is None%}
+                <div class="row">
+                    <span><b>Give those buttons a push up there!</b></span>
+                </div>
+                {% else %}                   
                 <div class="row">
                     <div class="col s12">
                         <ul>
@@ -84,22 +115,17 @@
                             {% endfor %}                        
                         </ul>
                     </div>               
-                </div>
-                <div class="row">
-                    <div class="col s1 offset-s10">
-                        <a href="!#" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">edit</i></a>
-                    </div>
-                    <div class="col s1">
-                        <a href="!#" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">add</i></a>
-                    </div>
-                </div>
+                </div>             
             </div>
+            {% endif %}
         </div>
         <div class="row">
             <div class="col s2 offset-s10 right-align">
+                {% if shippay_form %}
                 <button class="orange btn" type="submit" name="review-order">
                     Review Order
-                </button>
+                </button>                            
+                {% endif %}
             </div>
         </div>
     </form>
