--- a/Store/Templates/Store/admin/orders/details.html
+++ b/Store/Templates/Store/admin/orders/details.html
@@ -12,11 +12,8 @@
 
 {% endblock %}
 {% block content %}
-<ul id="dropdown2" class="dropdown-content">
-        <li><a href="{%  url 'adminorderindex' %}">  Orders</a></li>
-        <li><a href="{%  url 'admincancelledorders' %}">  Cancelled Orders</a></li>
-      </ul>
-<h4><a style="color: black" class="dropdown-trigger" href="#!" data-target="dropdown2">Order #{{order.order_id}}</a></h4>
+
+<h4>Order #{{order.order_id}}</h4>
 
 <div class="row">
     <div class="col s12 m5">
@@ -66,8 +63,8 @@
                             <ul>
                                 <li>Credit Card: {{order.card.card_issuer}} Ending in {{order.card.last_four}}  </li>
                                 <li>Billing Address: </li>
-                                <li> {{order.card.billing_address.street}}  </li>
-                                <li> {{order.card.billing_address.city}} {{order.card.billing_address.state_code}} {{order.card.billing_address.zip_code}} </li>
+                                <li> {{billing.billing_address.street}}  </li>
+                                <li> {{billing.billing_address.city}} {{billing.billing_address.state_code}} {{billing.billing_address.zip_code}} </li>
                             </ul>
         
                         </div>       
