--- a/Store/Templates/Store/admin/orders/orders.html
+++ b/Store/Templates/Store/admin/orders/orders.html
@@ -12,10 +12,8 @@
 <link href="{%  static "css/bookstyle.css" %}" type="text/css" rel="stylesheet">
 {% endblock %}
 {% block content %}
-<ul id="dropdown2" class="dropdown-content">
-        <li><a href="{%  url 'admincancelledorders' %}">  Cancelled Orders</a></li>
-      </ul>
-<h4><a style="color: black" class="dropdown-trigger" href="#!" data-target="dropdown2"> Orders</a></h4>
+
+<h4> Orders</h4>
 
 <table>
     <thead>
@@ -28,7 +26,7 @@
     <tbody>
             {% for order in orders %}
             <tr>
-                <td><a href="orders/details/{{order.order_id}}" >{{ order.order_id }}</a></td>       
+                <td><a href="{% url 'adminorderdetail' order.order_id %}">{{order.order_id}}</a></td>
                 <td>{{ order.customer.id}}</td> 
                 <td>{{ order.date_ordered}}</td>           
             </tr>
