--- a/Store/Templates/Store/customer/corder.html
+++ b/Store/Templates/Store/customer/corder.html
@@ -26,11 +26,9 @@
                         <li>Date Ordered: {{order.date_ordered}} </li>
                         <li>Discount: {{order.discount}}</li>
                         <li>Total Price: {{order.total_price}}</li>
-                        <li>Status: {{order.status}} </li>
+                       
                     </ul>
-                    <div class="card-action">
-                        <a class="modal-trigger "href="#cancelOrder">Cancel Order</a>
-                    </div>     
+                     
                 </div>       
             </div>
         </div>
@@ -67,8 +65,8 @@
                             <ul>
                                 <li>Credit Card: {{order.card.card_issuer}} Ending in {{order.card.last_four}}  </li>
                                 <li>Billing Address: </li>
-                                <li> {{order.card.billing_address.street}}  </li>
-                                <li> {{order.card.billing_address.city}} {{order.card.billing_address.state_code}} {{order.card.billing_address.zip_code}} </li>
+                                <li> {{billing.billing_address.street}}  </li>
+                                <li> {{billing.billing_address.city}} {{billing.billing_address.state_code}} {{billing.billing_address.zip_code}} </li>
                             </ul>
         
                         </div>       
@@ -86,21 +84,7 @@
                 </div>
                 </div>
             </div>
-            <div id="cancelOrder" class="modal">
-                    <form method="POST" class="col s12" >
-                    {% csrf_token %} 
-                    
-                    <div class="modal-content">
-                            <h3> Cancel Order?</h3>
-                        <div class="row">
-                            <p>Money Will be Refunded within 5-7 Business Days</p>
-                        </div>
-                    <div class="modal-footer">
-                        
-                        <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="cancel-order">Cancel Order</button>
-                    </div>
-                    </form>
-                    </div>
+    
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
 <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/books.js" %}"></script>
