Added logout functionality and search books

--- a/Store/Templates/Store/admin/books/books.html
+++ b/Store/Templates/Store/admin/books/books.html
@@ -6,30 +6,29 @@
 <link href="{% static "css/bookstyle.css" %}" type="text/css" rel="stylesheet">
 {% endblock %}
 
-{% block content %}
-
-
-<div class="section">
-    <div class="row">
-        <div class="col s2">
-            <h4><i class="material-icons small">book</i> Books</h4>
-        </div>
-        <div class="col s4">
-            <nav>
-                <div class="nav-wrapper grey lighten-2">
-                    <form>
-                        <div class="input-field">
-                            <input id="search" type="search" required>
-                            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                            <i class="material-icons">close</i>
-                        </div>
-                    </form>
-                </div>
-            </nav>
-        </div>
+{% block nav %}
+<div class="nav-content teal darken-1">
+    <div class="nav-wrapper">
+        <form action="">
+            <div class="input-field">
+                <input id="search-books" type="search" style="min-height: 64px;" onkeyup="filterByTitle()" placeholder="Search for titles..." required>
+                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                <i class="material-icons">close</i>
+            </div>            
+        </form>
     </div>
 </div>
-<table>
+{% endblock %}
+
+{% block content %}
+<div class="section">
+    <div class="row">
+        <div class="col s12">
+            <h4><i class="material-icons small">book</i> Books</h4>
+        </div>       
+    </div>
+</div>
+<table id="books">
     <thead>
         <tr>
             <th>Book ({{ num_books }})</th>
@@ -66,9 +65,27 @@
     </a>
 </div>
 
-
-
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
 <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/books.js" %}"></script>
+
+<script>
+    function filterByTitle() {
+        var input, filter, table, tr, td, i;
+        input = document.getElementById("search-books");
+        filter = input.value.toUpperCase();
+        table = document.getElementById("books");
+        tr = table.getElementsByTagName("tr");
+        for (i = 0; i < tr.length; i++) {
+            td = tr[i].getElementsByTagName("td")[0];
+            if (td) {
+                if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                    tr[i].style.display = "";
+                } else {
+                    tr[i].style.display = "none";
+                }
+            }       
+        }
+    }            
+</script>
 {% endblock %}
