--- a/Store/Templates/Store/layout.html
+++ b/Store/Templates/Store/layout.html
@@ -17,23 +17,23 @@
 <body>
     <header>
         <div class="navbar-fixed">
-        <nav class="extended ">
-            <div class="nav-wrapper teal">
-            <a href="{% url 'home' %}" class="brand-logo">Bookish</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">                        
-                {% if user_id %}
-                    <li><a href="{% url 'customeraccount' %}">{{username}}</a></li>
-                    <li><a href="{% url 'cart' %}"><i class="material-icons">shopping_cart</i></a></li>
-                    <li><a href="{% url 'login' %}">Logout</a></li>
-                {% else %}
-                    <li><a href="login">Login</a></li>            
-                {% endif %}              
-            </ul>
-            </div>
-            {% block nav %}
-            
-            {% endblock %}
-        </nav>
+            <nav class="extended ">
+                <div class="nav-wrapper teal">
+                <a href="{% url 'home' %}" class="brand-logo">Bookish</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">                        
+                    {% if user_id %}
+                        <li><a href="{% url 'customeraccount' %}">{{username}}</a></li>
+                        <li><a href="{% url 'cart' %}"><i class="material-icons">shopping_cart</i></a></li>
+                        <li><a href="{% url 'logout' %}">Logout</a></li>
+                    {% else %}
+                        <li><a href="{% url 'login' %}">Login</a></li>            
+                    {% endif %}              
+                </ul>
+                </div>
+                {% block nav %}
+                
+                {% endblock %}
+            </nav>
         </div>
     </header>
     <main>
