--- a/Store/Templates/Store/customer/cart.html
+++ b/Store/Templates/Store/customer/cart.html
@@ -77,7 +77,7 @@
                                 <div class="section">
                                     <h6>It's lonely here</h6>
                                     <br>
-                                    <a href="{% url 'customer_books'%}">Go shopping bro!</a>
+                                    <a href="{% url 'home'%}">Go shopping bro!</a>
                                 </div>                        
                                 {% endif %}
                             </tbody>                                   
@@ -114,7 +114,7 @@
             <h5>Get 10% off for orders over $75.00!</h5>
         </div>
         <div class="row center-align">        
-            <a class="orange btn" href="{% url 'ship_pay'%}">Check out</a> or <a href="{% url 'customer_books'%}">Continue shopping</a>
+            <a class="orange btn" href="{% url 'ship_pay'%}">Check out</a> or <a href="{% url 'home'%}">Continue shopping</a>
         </div>
         {% endif %}
     </div>
