--- a/Store/Templates/Store/customer/corder.html
+++ b/Store/Templates/Store/customer/corder.html
@@ -24,8 +24,8 @@
                     <span class="card-title"><b>Order Overview</b></span>
                     <ul>
                         <li>Date Ordered: {{order.date_ordered}} </li>
-                        <li>Discount: {{order.discount}}</li>
-                        <li>Total Price: {{order.total_price}}</li>
+                        <li>Discount: {{discount}}%</li>
+                        <li>Total Price: ${{discount_price}}</li>
                        
                     </ul>
                      
