--- a/Store/Templates/Store/login.html
+++ b/Store/Templates/Store/login.html
@@ -47,7 +47,7 @@
 </div>
 <div class="row center-align">
     <p>New to Bookish?</p>
-  <a class="waves-effect waves-light modal-trigger btn" href="#newcustomer">Register</a>    
+  <a class="waves-effect waves-light modal-trigger orange btn" href="#newcustomer">Register</a>    
 </div>
 
 <div id="newcustomer" class="modal">
