--- a/Store/Templates/Store/customer/addcard.html
+++ b/Store/Templates/Store/customer/addcard.html
@@ -17,7 +17,6 @@
 <form method="POST" class="col s6 m6" >
 {% csrf_token %} 
 {{ addcard.non_field_errors }}
-
     <h4>Add New Credit Card</h4>
     <div class="input-field  col s6 m6">
         {{addcard.card_number.errors}}
@@ -46,22 +45,24 @@
                 <i class="small material-icons">add_circle</i></a>
                 </h5> 
             </div>
-<div class="section">
-    {% for address in addcard.billing_addresses %}
-    <div class="row">
-        <div class="col s12">
-            <li class="card-item">
-                <label>
-                    {{address.tag}}
-                    <span>{{address.choice_label}}</span>
-                </label>
-            </li>
-        </div>               
-    </div>
+    <div class="section">
+        {% for address in addcard.billing_addresses %}
+        <div class="row">
+            <div class="col s12">
+                <li class="card-item">
+                    <label>
+                        {{address.tag}}
+                        <span>{{address.choice_label}}</span>
+                    </label>
+                </li>
+            </div>               
+        </div>
     {% endfor %}
-    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat" name="go-back">Cancel</a>
-<button type="submit" class="modal-action waves-effect waves-green btn-flat" name="add-card">Add New Card</button>
-
+    {% if num_bill_address == 0 %}
+        <h6 class="red-text">Add a billing address before you add card information!</h6>
+    {% else %}        
+        <button type="submit" class="waves-effect waves-green btn orange" name="add-card">Add New Card</button>
+    {% endif %}
 </form>
 <div id="addAddress" class="modal">
         <form method="POST" class="col s12">
