--- a/Store/Templates/Store/admin/books/addbook.html
+++ b/Store/Templates/Store/admin/books/addbook.html
@@ -1,18 +1,9 @@
 {% extends 'Store/layoutadmin.html' %}
 {% load staticfiles %}
 {% load widget_tweaks %}
-{% block nav %}
-  {% if user_id is none %}
-    <li>You are currently logged out</li>
-  {% else %}
-    <li><b>Greetings, {{username}}</li>
-  {% endif %}
-{% endblock %} 
 
 {% block content %}
-
-
-<form method="POST" class="col s12">
+<form method="POST" class="col s12 section">
     {% csrf_token %}
     {{ book_form.non_field_errors }}            
     
@@ -105,11 +96,9 @@
                 {{ book_form.retail_price }}
             </div>
         </div>
-    
-               
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-        <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="create-book">Create Book</button>
-    
+        <div class="section right-align">
+            <button type="submit" class="waves-effect waves-green btn orange" name="create-book">Create Book</button>
+        </div>        
 </form>
 
 <div id="addauthor" class="modal">
