--- a/Store/Templates/Store/admin/orders/orders.html
+++ b/Store/Templates/Store/admin/orders/orders.html
@@ -1,13 +1,7 @@
 {% extends 'Store/layoutadmin.html' %}
 {% load staticfiles %}
 {% load widget_tweaks %}
-{% block nav %}
-  {% if user_id is none %}
-    <li>You are currently logged out</li>
-  {% else %}
-    <li>Greetings, {{username}}</li>
-  {% endif %}
-{% endblock %} 
+ 
 {% block head %}
 <link href="{%  static "css/bookstyle.css" %}" type="text/css" rel="stylesheet">
 {% endblock %}
@@ -19,8 +13,9 @@
     <thead>
         <tr>
             <th>Order ID</th>
-            <th> Customer ID</th>
-            <th> Date Ordered </th>
+            <th>Customer ID</th>
+            <th>Date Ordered </th>
+            <th>Status</th>
         </tr>
     </thead>
     <tbody>
@@ -28,7 +23,8 @@
             <tr>
                 <td><a href="{% url 'adminorderdetail' order.order_id %}">{{order.order_id}}</a></td>
                 <td>{{ order.customer.id}}</td> 
-                <td>{{ order.date_ordered}}</td>           
+                <td>{{ order.date_ordered}}</td>
+                <td>{{ order.status }}</td>           
             </tr>
             {% endfor %}
         </form>           
