--- a/Store/Templates/Store/admin/publishers/details.html
+++ b/Store/Templates/Store/admin/publishers/details.html
@@ -4,15 +4,9 @@
 {% block head %}
 <link href="{% static "css/checkout.css" %}" type="text/css" rel="stylesheet">
 {% endblock %}
-{% block nav %}
-  {% if user_id is none %}
-    <li>You are currently logged out</li>
-  {% else %}
-    <li><b>Greetings, {{ username }}!</b></li>
-  {% endif %}
-{% endblock %} 
 
 
+{% block content %}
 <h4>{{publisher.company_name}} </h4>
 <h6> Total Revenue for Publisher: ${{sum}} <br>
     Total Number of books for Publisher: {{sum_inventory}}
@@ -59,25 +53,6 @@
                 </table>         
             </div>  
               
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col s12 m5">
-        <div class="card">
-            <div class="card-content">
-                <span class="card-title"><b>TBD</b></span>
-                
-            </div>       
-        </div>
-    </div>
-<div class="col s12 m5">
-        <div class="card">
-            <div class="card-content">
-                <span class="card-title"><b>TBD</b></span>
-                
-                
-            </div>       
         </div>
     </div>
 </div>
