--- a/Store/Templates/Store/customer/books/details.html
+++ b/Store/Templates/Store/customer/books/details.html
@@ -5,12 +5,10 @@
 {% block content %}
 <div class="section"></div>
 <div class="row">
-    <div class="col s6">
-        <div class="carousel">
-            {% for image in images %}
-            <a class="carousel-item" href="#one!"><img src="{{ image.image_url }}"></a>                  
-            {% endfor %}
-        </div>
+    <div class="col s6">        
+        {% for image in images %}
+        <a class="materialboxed" width="300"><img src="{{ image.image_url }}"></a>                  
+        {% endfor %}        
     </div>
     <div class="col s6">
         <div class="card">
