--- a/Store/Templates/Store/customer/index.html
+++ b/Store/Templates/Store/customer/index.html
@@ -5,9 +5,9 @@
 
 {% block content %}
 
-<div class="row">
+<div class="row section">
     <div class="col s4">
-        <a href="{% url 'customer_books' %}">Go to books...</a>
+        <a href="{% url 'home' %}">Go to books...</a>
     </div>
 </div>
 
