--- a/Store/Templates/Store/customer/invoice.html
+++ b/Store/Templates/Store/customer/invoice.html
@@ -98,20 +98,20 @@
                         <td>{% multiply book.book.inventory.retail_price book.quantity %}</td>                            
                     </tr>
                     {% endfor %}                 
-                    {% if discount_price %}
+                    {% if original_price %}
                     <tr>
                         <td></td>                                                                        
                         <td></td>
                         <td></td>
                         <td><b>Subtotal:</b></td>
-                        <td><h6 class="grey-text strike">${{ order.total_price }}</h6></td>
+                        <td><h6 class="grey-text strike">${{ original_price }}</h6></td>
                     </tr>
                     <tr>
                         <td></td>                                                                        
                         <td></td>
                         <td></td>
                         <td><b>Discounted Price:</b></td>
-                        <td><h6>${{ discount_price }}</h6></td>
+                        <td><h6>${{ order.total_price }}</h6></td>
                     </tr>
                     {% else %}
                     <tr>
