--- a/Store/Templates/Store/index.html
+++ b/Store/Templates/Store/index.html
@@ -1,43 +1,78 @@
-{% extends 'Store/layout.html' %}
-{% load staticfiles %}
-{% load widget_tweaks %}
-
+{% extends 'Store/layout.html' %} 
+{% load staticfiles %} 
+{% load widget_tweaks %} 
 {% block head %}
-<link href="{% static "css/checkout.css" %}" type="text/css" rel="stylesheet">
-{% endblock %}
+<link href="{% static "css/homestyle.css" %}" type="text/css" rel="stylesheet"> 
+{% endblock %} 
 
-{% block nav %}
-  {% if user_id is none %}
-    <li>You are currently logged out</li>
-  {% else %}
-    <li><b>Greetings, {{ username }}!</b></li>
-  {% endif %}
-  {% endblock %} 
 {% block content %}
-
+<div class="row" style="width: 100%;">
+  <div class="col s12">
+    <div class="slider">
+        <ul class="slides" style="background-color: transparent;">
+          <li>
+            <img src="/static/media/books-1.jpg"> <!-- random image -->
+            <div class="caption center-align">
+              <h3>Feeling Bookish?</h3>
+              <h5 class="light grey-text text-lighten-3">Explore captivating titles</h5>
+            </div>
+          </li>
+          <li>
+            <img class="slider-image" src="{{ best_sell_1.image_url }}" style="background-position: right;"> 
+            <div class="black-text caption left-align">
+              <h3>{{ best_sell_1.book.title }}</h3>
+              <h5 class="light text-lighten-3">People like this one</h5>
+            </div>
+          </li>
+          <li>
+            <img class="slider-image" src="{{ best_sell_2.image_url }}" syle="background-position: left;"> 
+            <div class="black-text caption right-align">
+              <h3>{{ best_sell_2.book.title }}</h3>
+              <h5 class="light text-lighten-3">Read to your heart's content</h5>
+            </div>
+          </li>
+          <li>
+            <img class="slider-image" src="{{ best_sell_3.image_url }}" style="background-position: right ;"> 
+            <div class="black-text caption left-align">
+              <h3>{{ best_sell_3.book.title }}</h3>
+              <h5 class="light text-lighten-3">Feel bookish no more</h5>
+            </div>
+          </li>
+        </ul>
+      </div>   
+  </div>             
+</div>
 <div class="row">
-{% for image in images %}
+  {% for image in images %}
   <div class="col s4">
-      <a style='color:black' href="{% url 'customer_book' image.book_id %}">
-    <div class="card horizontal ">
-      <div class="card-image">
+    <a style='color:black' href="{% url 'customer_book' image.book.book_id %}">
+      <div class="card hoverable horizontal">
+        <div class="card-image" >
           <img src="{{ image.image_url }}">
-      </div>
-      <div class="card-content">
-          <dl>
-            <dt><b>{{image.title}}</b></dt>
-            <dd>${{image.retail_price}}</dd>
-          </dl>
         </div>
-    </div>  
-    </a>        
+        <div class="card-content">
+          <div class="row">
+            <div class="col s12">
+              <b>{{ image.book.title }}</b>
+            </div>
+            <div class="row" style="position: absolute; margin: bottom;">
+              <div class="col s12">
+                ${{ image.book.inventory.retail_price }}  
+              </div>              
+            </div>                                  
+          </div>                    
+        </div>
+      </div>
+    </a>
   </div>
-{% if forloop.counter|divisibleby:3 %}
+  {% if forloop.counter|divisibleby:3 %}
 </div>
 <div class="row">
 {% endif %}
 {% endfor %}
 </div>
-{% endblock %}
 
-       
+<script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
+<script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
+<script type="text/javascript" src="{% static "js/books.js" %}"></script>
+{% endblock %}
