--- a/Store/Templates/Store/customer/shippay.html
+++ b/Store/Templates/Store/customer/shippay.html
@@ -27,7 +27,7 @@
                     </div>
                     {% if shippay_form%}
                     <div class="col s1">
-                        <a href="{% url 'customeraccount' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">edit</i></a>
+                        <a href="{% url 'cpaymentindex' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">edit</i></a>
                     </div>
                     <div class="col s1">
                         <a href="{% url 'customeraddcard' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">add</i></a>
@@ -86,14 +86,14 @@
                     </div>
                     {% if shippay_form%}
                     <div class="col s1">
-                        <a href="{% url 'customeraccount' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">edit</i></a>
+                        <a href="{% url 'caddressindex' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">edit</i></a>
                     </div>
                     <div class="col s1">
-                        <a href="{% url 'customeraccount' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">add</i></a>
+                        <a href="{% url 'caddressindex' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">add</i></a>
                     </div>
                     {% else %}
                     <div class="col s1">
-                        <a href="{% url 'customeraccount' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">add</i></a>
+                        <a href="{% url 'caddressindex' %}" class="addbtn btn-floating btn-small waves-effect modal-trigger"><i class="material-icons">add</i></a>
                     </div>
                     {% endif %}
                 </div>                            
