--- a/Store/Templates/Store/layout.html
+++ b/Store/Templates/Store/layout.html
@@ -16,13 +16,19 @@
 </head>
 <body>
     <header>
+            <ul id="dropdown1" class="dropdown-content">
+                    <li><a href="{% url 'customeraccount' %}">My Account</a></li>
+                    <li><a href="{% url 'customerorderindex' %}">Order History</a></li>
+                    <li><a href="{% url 'caddressindex' %}">Address Info</a></li>
+                    <li><a href="{% url 'cpaymentindex' %}">Payment Info</a></li>
+                </ul>
         <div class="navbar">
             <nav class="extended ">
                 <div class="nav-wrapper teal">
                 <a href="{% url 'home' %}" class="brand-logo">Bookish</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">                        
                     {% if user_id %}
-                        <li><a href="{% url 'customeraccount' %}">{{username}}</a></li>
+                        <li><a class="dropdown-trigger" href="{% url 'customeraccount' %}" data-target="dropdown1">{{username}}</a></li>
                         <li><a href="{% url 'cart' %}"><i class="material-icons">shopping_cart</i></a></li>
                         <li><a href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
