--- a/Store/Templates/Store/layoutadmin.html
+++ b/Store/Templates/Store/layoutadmin.html
@@ -28,7 +28,7 @@
         </ul>
         <nav class="nav-extended">
             <div class="nav-wrapper teal">
-                <a href="{% url 'adminindex' %}" class="brand-logo">Bookish</a>
+                <a href="{% url 'adminindex' %}" class="brand-logo"><i class="medium material-icons">book</i>Bookish</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">                        
                     {% if user_id %}
                         <li>{{username}}</li>
